gcc/testsuite/rust/compile/compiler_builtins_gate.rs
#![feature(no_core)]
#![no_core]
#![compiler_builtins] // { dg-error "the ..compiler_builtins. attribute is used to identify the compiler_builtins" }
